--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,105 @@ div.popular{
 margin-top: 100px;
 text-align: center;
 }
-img:hover{
+div.place-img{
+ 
+    width: 246px;
+    height: 274px;
+    background: #FEFEFE;
+    border-radius: 21px;
+    transition: 0.4s;
+    background-image: url('images/Rectangle\ 8.png');
+    background-size: cover;
+}
+div.gallery{
 
-transform: scale(1.5);    
+    display:flex;
+    margin: auto;
+    justify-content: space-evenly;
+}
+div.place-img:hover{
+    box-shadow: 0px 10px 20px rgba(70, 70, 70, 0.4);
+transform: scale(1.1);
+}
+/* more item btn */
+div#moreItem{
+    box-shadow: 0px 10px 30px #C82333 ;
+}
+
+/* services */
+
+.fas{
+    color: #c82333c7;
+}
+.fas:hover{
+    color: #C82333;
+}
+div.service{
+    margin-top: 100px;
+}
+/* testimonails */
+div.testimonials{
+    margin: 100px;
+}
+
+div.footerBig{
+color: white;
+    background-color: #C82333;
+    padding: 20px;
+}
+
+
+/* mobile responsive */
+@media only screen and (max-width: 600px) {
+
+    div.gallery{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    div.place-img{
+        margin: 4px;
+    }
+
+    .image{
+   
+        padding: 20px;
+        background-image: url('images/bg.png');
+     
+    width: auto;
+    height: 360px;
+    background-size: cover;
+ 
+    }
+    .headings{
+        margin-top: 20px;
+        
+    }
+    h3.fancy{
+        font-size: 20px;
+
+    }
+    h1.firstHeading{
+        font-size: 30px;
+    }
+    h3.secondHeading{
+        font-size: 15px;
+    }
+    .wrapper{
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(255, 255, 255,1);
+        max-width: 800px;
+        width: 90%;
+        padding:0px;
+    
+        display: flex;
+        justify-content: space-between;
+        border-radius: 5px;
+        box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25);;
+    
+    }
+
+
 }
