--- a/styles.css
+++ b/styles.css
@@ -111,14 +111,13 @@ div.testimonials{
     margin: 100px;
 }
 h4.testText{
-   
     width: 100%;
     text-align: center;
 }
 /* footer */
 div.footerBig{
 color: white;
-    background-color: #C82333;
+    background-color:#c82333c7;
     padding: 20px;
 }
 
