--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,9 @@ div.service{
 div.testimonials{
     margin: 100px;
 }
+h1.test{
+    text-align: center;
+}
 h4.testText{
     width: 100%;
     text-align: center;
